tests/ui/error-codes/E0206.stderr
error[E0206]: the trait `Copy` cannot be implemented for this type
  --> $DIR/E0206.rs:4:15
   |
LL | impl Copy for &'static mut Bar { }
   |               ^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error: aborting due to previous error

For more information about this error, try `rustc --explain E0206`.
